@@ -1,5 +1,6 @@
 Changes for 1.8.4rc1
 
+ - [ZBX-2899] fixed slideshow delays broken after upgrade from 1.8.2 (Vedmak)
  - [ZBX-2923] fixed triggers that depends on problem trigger are shown as problem on map (Vedmak)
  - [ZBX-2683] minor updates for the Latvian translation (Richlv)
  - [ZBX-2916] fixed duplicate map parent links in monitoring maps (Vedmak) 
